apps/headplane/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headplane
  namespace: headplane
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headplane.pedrocoutinho.eu`)
      kind: Rule
      services:
        - name: headplane
          port: 3000
  tls: {}
